# web-sherlock

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  SECURITY.md  TRANSLATION.md  add_translation.py  app.py  auth_manager.py  example_usernames.json  example_usernames_object.json  export_utils.py  history_manager.py  pyproject.toml  requirements.txt  run_local.bat  run_local.sh  setup_venv.bat  setup_venv.sh  sherlock_runner.py  test_usernames.json  translations.py
.github/: dependabot.yml
static/css/: style.css
static/js/: main.js
templates/: base.html  history.html  index.html  login.html  register.html  results.html
translations/: __init__.py  en.json  es.json  jp.json  pt.json  zh.json
