[project]
name = "websherlock"
version = "1.0"
description = "Web sherlock gui interface"
requires-python = ">=3.11"
dependencies = [
    "certifi>=2025.6.15",
    "colorama>=0.4.6",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "pandas>=2.3.0",
    "psycopg2-binary>=2.9.10",
    "pysocks>=1.7.1",
    "reportlab>=4.4.2",
    "requests-futures>=1.0.2",
    "requests>=2.32.4",
    "stem>=1.8.2",
    "werkzeug>=3.1.3",
    "torrequest>=0.1.0",
    "openpyxl>=3.1.5",
]
