[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "web-sherlock"
version = "1.0.0"
description = "Web interface for Sherlock username search tool with internationalization and authentication"
authors = ["azurejoga"]
readme = "README.md"
packages = [{include = "web_sherlock"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
gunicorn = "^23.0.0"
requests = "^2.31.0"
pandas = "^2.1.0"
reportlab = "^4.0.0"
colorama = "^0.4.6"
openpyxl = "^3.1.0"
psycopg2-binary = "^2.9.7"
werkzeug = "^3.0.0"
email-validator = "^2.1.0"
certifi = "^2024.7.4"
pysocks = "^1.7.1"
requests-futures = "^1.0.1"
stem = "^1.8.2"
torrequest = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^25.1.0"
flake8 = "^7.3.0"
mypy = "^1.5.0"

[tool.poetry.scripts]
web-sherlock = "main:app"